--- a/index.html
+++ b/index.html
@@ -4,164 +4,154 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cyber Security Exam Answers</title>
+
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
-      background: #f7f7f7;
+      line-height: 1.7;
+      background: #f4f4f4;
+      padding-bottom: 50px;
     }
 
     header {
-      background-color: #333;
+      background: #222;
       color: #fff;
-      padding: 1rem 2rem;
+      padding: 20px 15px;
       text-align: center;
     }
 
-    .container {
-      padding: 2rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.5rem;
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 5px;
     }
 
-    .card {
+    h2 {
+      color: #333;
+      margin: 20px 0 10px 0;
+      font-size: 1.4rem;
+    }
+
+    p, li {
+      font-size: 1rem;
+      margin-bottom: 8px;
+      color: #444;
+    }
+
+    .wrapper {
+      max-width: 900px;
+      margin: auto;
       background: #fff;
-      padding: 1.5rem;
+      padding: 20px;
+      margin-top: 20px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
-    .card h2 {
-      margin-bottom: 1rem;
-      color: #333;
-      font-size: 1.4rem;
+    ul {
+      padding-left: 20px;
     }
 
-    .card p {
-      margin-bottom: 0.7rem;
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.4rem;
+      }
+      h2 {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
+
 <body>
 
 <header>
-  <h1>Cyber Security in Artificial Intelligence – Exam Answers</h1>
+  <h1>Cyber Security in AI — Exam Answers</h1>
+  <p>Complete One-Page Responsive Summary</p>
 </header>
 
-<div class="container">
+<div class="wrapper">
 
   <!-- SECTION A -->
-  <div class="card">
-    <h2>Section A – Q A1 (i)</h2>
-    <p><b>Answer:</b> The technique is called <b>Cryptanalysis</b>. It breaks encryption and recovers original messages without knowing the key.</p>
-  </div>
+  <h2>Section A – Q A1 (i)</h2>
+  <p><b>Cryptanalysis</b> is the method of decoding a message from unreadable format back to readable format without knowing the encryption key.</p>
 
-  <div class="card">
-    <h2>Section A – Q A1 (ii)</h2>
-    <p><b>Answer:</b> This refers to <b>Sensitive Data Exposure</b>, where sensitive information like passwords or credit card data is not properly protected.</p>
-  </div>
+  <h2>Section A – Q A1 (ii)</h2>
+  <p>This issue is called <b>Sensitive Data Exposure</b>. It occurs when sensitive information (passwords, credit card numbers, health data) is not properly protected.</p>
 
-  <div class="card">
-    <h2>Section A – Q A2</h2>
-    <p><b>Phishing:</b> A social-engineering attack using fake emails/websites to steal user credentials.</p>
-    <p><b>Pharming:</b> Redirecting users to fake websites by manipulating DNS, even when the correct URL is typed.</p>
-  </div>
+  <h2>Section A – Q A2</h2>
+  <p><b>Phishing:</b> Attackers trick users with fake emails/websites into giving away credentials.</p>
+  <p><b>Pharming:</b> Attackers redirect users to fake websites by manipulating DNS, even with correct URL.</p>
 
-  <div class="card">
-    <h2>Section A – Q A3</h2>
-    <p><b>Threat Hunting in Memory:</b> Actively detecting malware within RAM.</p>
-    <p><b>Techniques:</b></p>
-    <ul>
-      <li>Scanning memory artifacts like DLLs and injected threads.</li>
-      <li>Using tools like Volatility for forensic memory analysis.</li>
-    </ul>
-  </div>
+  <h2>Section A – Q A3</h2>
+  <p><b>Threat hunting in memory:</b> Actively analyzing RAM for malware or anomalies.</p>
+  <p><b>Techniques:</b></p>
+  <ul>
+    <li>Checking memory artifacts (DLLs, injected threads).</li>
+    <li>Using Volatility for memory forensics.</li>
+  </ul>
+
 
   <!-- SECTION B -->
-  <div class="card">
-    <h2>Section B – Q B1</h2>
-    <p><b>Cybercriminal Cases:</b> Hackers, fraudsters, insiders, cyber-terrorists, organized crime.</p>
-    <p><b>Categories:</b></p>
-    <ul>
-      <li>Black-hat Hackers</li>
-      <li>Grey-hat Hackers</li>
-      <li>Script Kiddies</li>
-      <li>State-sponsored Hackers</li>
-      <li>Insider Threats</li>
-    </ul>
-  </div>
+  <h2>Section B – Q B1</h2>
+  <p><b>Cybercriminals include:</b> Hackers, fraudsters, insiders, cyber-terrorists, crime groups.</p>
+  <p><b>Categories:</b></p>
+  <ul>
+    <li>Black-hat Hackers</li>
+    <li>Grey-hat Hackers</li>
+    <li>Script Kiddies</li>
+    <li>State-sponsored Hackers</li>
+    <li>Insiders</li>
+  </ul>
 
-  <div class="card">
-    <h2>Section B – Q B2</h2>
-    <p><b>Security-Specific Mechanisms:</b> Encryption, authentication, digital signatures, access control.</p>
-    <p><b>Pervasive Mechanisms:</b> Auditing, logging, IDS, security management.</p>
-  </div>
+  <h2>Section B – Q B2</h2>
+  <p><b>Security-Specific Mechanisms:</b> Encryption, authentication, signatures, access control.</p>
+  <p><b>Pervasive Mechanisms:</b> Logging, auditing, IDS, security management.</p>
 
-  <div class="card">
-    <h2>Section B – Q B3</h2>
-    <ul>
-      <li>Automated vulnerability scanning</li>
-      <li>Continuous penetration testing</li>
-      <li>SIEM-based real-time monitoring</li>
-      <li>Threat intelligence integration</li>
-      <li>Red-team vs blue-team exercises</li>
-    </ul>
-  </div>
+  <h2>Section B – Q B3</h2>
+  <ul>
+    <li>Automated vulnerability scanning</li>
+    <li>Continuous penetration testing</li>
+    <li>SIEM-based monitoring</li>
+    <li>Threat intelligence updates</li>
+    <li>Red vs Blue team exercises</li>
+  </ul>
 
-  <div class="card">
-    <h2>Section B – Q B4</h2>
-    <p><b>Brute-force Attack:</b></p>
-    <ul>
-      <li>Online: Slow, detectable, guessing passwords live.</li>
-      <li>Offline: Fast, cracks stolen hashed passwords.</li>
-    </ul>
-    <p><b>Replay Attack:</b> Reusing captured authentication data.</p>
-    <p><b>Weak Implementation Attack:</b> Exploiting outdated algorithms or poor key management.</p>
-  </div>
+  <h2>Section B – Q B4</h2>
+  <p><b>Brute-force attack:</b></p>
+  <ul>
+    <li><b>Online:</b> Slow and detectable, tries passwords on live system.</li>
+    <li><b>Offline:</b> Fast and dangerous; cracks stolen password hashes.</li>
+  </ul>
+  <p><b>Replay attack:</b> Reusing captured login packets.</p>
+  <p><b>Weak implementation attack:</b> Exploiting outdated crypto, bad key management.</p>
+
 
   <!-- SECTION C -->
-  <div class="card">
-    <h2>Section C – Q C1 (a)</h2>
-    <p><b>Static Analysis:</b> Inspects code without running it; detects signatures and patterns; fast but weak against obfuscation.</p>
-    <p><b>Dynamic Analysis:</b> Executes malware in sandbox; reveals runtime behavior; strong but slower and resource-heavy.</p>
-    <p><b>Effectiveness:</b> Static is quick but limited; dynamic is accurate but costly; hybrid gives best detection.</p>
-  </div>
+  <h2>Section C – Q C1 (a)</h2>
+  <p><b>Static Analysis:</b> Examines malware without running it; fast but fails against obfuscation.</p>
+  <p><b>Dynamic Analysis:</b> Executes malware in sandbox; reveals behavior but resource-heavy.</p>
+  <p><b>Impact:</b> Static is quick but limited; dynamic is accurate but slower; hybrid is ideal.</p>
 
-  <div class="card">
-    <h2>Section C – Q C1 (b)</h2>
-    <p><b>Challenges in Malware Detection:</b></p>
-    <ul>
-      <li>Polymorphism & metamorphism</li>
-      <li>Fileless malware execution</li>
-      <li>Zero-day vulnerabilities</li>
-      <li>Sandbox detection and evasion</li>
-      <li>Supply chain attacks</li>
-      <li>Encrypted command & control channels</li>
-      <li>Rapid mutation via malware kits</li>
-      <li>Insider threats</li>
-    </ul>
-  </div>
+  <h2>Section C – Q C1 (b)</h2>
+  <p><b>Major Challenges in Malware Detection:</b></p>
+  <ul>
+    <li>Polymorphic & metamorphic malware</li>
+    <li>Fileless malware</li>
+    <li>Zero-day vulnerabilities</li>
+    <li>Sandbox evasion</li>
+    <li>Supply chain attacks</li>
+    <li>Encrypted C2 channels</li>
+    <li>Rapid mutation via malware kits</li>
+    <li>Insider threats</li>
+  </ul>
 
 </div>
-
-<footer>
-  <p>Cyber Security Exam Answers – Generated for Practice & Revision</p>
-</footer>
 
 </body>
 </html>
